--- a/features/login/src/main/res/values/strings.xml
+++ b/features/login/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="forgot_password">Lupa Password</string>
     <string name="label_login">Login</string>
     <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
-    <string name="label_sign_up_now">Don\'t have an account yet?  <font color='#00AB6D'>Register Now</font></string>
+    <string name="label_sign_up_now">Belum Punya akun? <font color='#4ca762'>Daftar sekarang</font></string>
 </resources>
